--- a/src/content/docs/0.0.x/index.mdx
+++ b/src/content/docs/0.0.x/index.mdx
@@ -20,7 +20,7 @@ hero:
 slug: 0.0.x
 ---
 
-import Clarity from '../@/components/clarity.astro';
+import Clarity from '../../../components/clarity.astro';
 import {Card, CardGrid} from '@astrojs/starlight/components';
 
 <Clarity />
@@ -29,7 +29,7 @@ import {Card, CardGrid} from '@astrojs/starlight/components';
 
 Rawi (راوي) is a unified, developer-friendly AI-powered CLI tool that provides a consistent interface for interacting with your development workflow. Rawi delivers clear answers, summaries, and analyses directly in your terminal, inspired by the rich Jordanian storytelling tradition.
 
----
+***
 
 ## Latest version
 
