--- a/src/content/docs/0.0.x/reference/info.mdx
+++ b/src/content/docs/0.0.x/reference/info.mdx
@@ -5,7 +5,7 @@ description: Welcome to the comprehensive documentation for Rawi (راوي), a
 slug: 0.0.x/reference/info
 ---
 
-import Clarity from '../@/components/clarity.astro';
+import Clarity from '../../../../components/clarity.astro';
 
 <Clarity />
 
@@ -25,13 +25,13 @@ rawi info [options]
 
 ## Options
 
-- `--profiles` (boolean)\
+* `--profiles` (boolean)\
   Show configured profiles.
 
-- `--providers` (boolean)\
+* `--providers` (boolean)\
   Show supported AI providers.
 
-- `-h, --help` (boolean)\
+* `-h, --help` (boolean)\
   Display help for command.
 
 ## Examples
@@ -54,6 +54,6 @@ $ rawi info --profiles
 $ rawi info --providers
 ```
 
----
+***
 
 For more information, see the Rawi documentation or run `rawi info --help`.
