--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -13,7 +13,7 @@ hero:
       icon: right-arrow
 ---
 
-import Clarity from '@/components/clarity.astro';
+import Clarity from '../../components/clarity.astro';
 import {Card, CardGrid} from '@astrojs/starlight/components';
 
 <Clarity />
