--- a/src/content/docs/getting-started/getting-started-source-install.mdx
+++ b/src/content/docs/getting-started/getting-started-source-install.mdx
@@ -3,8 +3,8 @@ title: Rawi (راوي) Documentation | Getting Started Building and installing t
 description: Welcome to the comprehensive documentation for Rawi (راوي), a developer-friendly AI-powered CLI tool for your terminal.
 ---
 
+import Clarity from '../../../components/clarity.astro';
 import {Aside, Tabs, TabItem, Steps} from '@astrojs/starlight/components';
-import Clarity from '@/components/clarity.astro';
 
 <Clarity />
 
