--- a/src/content/docs/getting-started/install.mdx
+++ b/src/content/docs/getting-started/install.mdx
@@ -3,7 +3,7 @@ title: Rawi (راوي) Documentation | Getting Started Install
 description: Welcome to the comprehensive documentation for Rawi (راوي), a developer-friendly AI-powered CLI tool for your terminal.
 ---
 
-import Clarity from '@/components/clarity.astro';
+import Clarity from '../../../components/clarity.astro';
 import {Tabs, TabItem} from '@astrojs/starlight/components';
 
 <Clarity />
