--- a/src/content/docs/reference/info.mdx
+++ b/src/content/docs/reference/info.mdx
@@ -3,7 +3,7 @@ title: Rawi (راوي) Documentation | Reference `info` Command
 description: Welcome to the comprehensive documentation for Rawi (راوي), a developer-friendly AI-powered CLI tool for your terminal.
 ---
 
-import Clarity from '@/components/clarity.astro';
+import Clarity from '../../../components/clarity.astro';
 
 <Clarity />
 
